@@ -1,4 +1,7 @@
-﻿body {
+﻿@import '../bower_components/bootstrap-less/less/bootstrap.less';
+@import '../bower_components/bootstrap-touch-carousel/src/less/carousel.less';
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
