@@ -4,12 +4,12 @@
   "devDependencies": {
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
+    "gulp-csslint": "0.1.5",
     "gulp-if": "1.2.5",
     "gulp-imagemin": "2.3.0",
     "gulp-jshint": "1.11.2",
     "gulp-less": "3.0.3",
     "gulp-minify-css": "1.1.6",
-    "gulp-recess": "1.1.2",
     "gulp-rename": "1.2.2",
     "gulp-size": "1.2.2",
     "gulp-sourcemaps": "1.5.2",
